--- a/tests/fixtures/html/00288-vor-section-references.html
+++ b/tests/fixtures/html/00288-vor-section-references.html
@@ -1,5 +1,5 @@
 <div class="elife-reflinks-links">
-    <article class="elife-reflinks-reflink" id="ref-1" data-original="1" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-1" data-original="1">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -27,7 +27,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-2" data-original="2" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-2" data-original="2">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -56,7 +56,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-3" data-original="3" data-cited="3">
+    <article class="elife-reflinks-reflink" id="ref-3" data-original="3">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -83,7 +83,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-4" data-original="4" data-cited="3">
+    <article class="elife-reflinks-reflink" id="ref-4" data-original="4">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -112,7 +112,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-5" data-original="5" data-cited="2">
+    <article class="elife-reflinks-reflink" id="ref-5" data-original="5">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -142,7 +142,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-6" data-original="6" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-6" data-original="6">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -172,7 +172,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-7" data-original="7" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-7" data-original="7">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -200,7 +200,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-8" data-original="8" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-8" data-original="8">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -229,7 +229,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-9" data-original="9" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-9" data-original="9">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -256,7 +256,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-10" data-original="10" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-10" data-original="10">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -285,7 +285,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-11" data-original="11" data-cited="2">
+    <article class="elife-reflinks-reflink" id="ref-11" data-original="11">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -316,7 +316,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-12" data-original="12" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-12" data-original="12">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -344,7 +344,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-13" data-original="13" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-13" data-original="13">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -374,7 +374,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-14" data-original="14" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-14" data-original="14">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -404,7 +404,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-15" data-original="15" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-15" data-original="15">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -434,7 +434,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-16" data-original="16" data-cited="3">
+    <article class="elife-reflinks-reflink" id="ref-16" data-original="16">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -464,7 +464,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-17" data-original="17" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-17" data-original="17">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -493,7 +493,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-18" data-original="18" data-cited="13">
+    <article class="elife-reflinks-reflink" id="ref-18" data-original="18">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -524,7 +524,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-19" data-original="19" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-19" data-original="19">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -555,7 +555,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-20" data-original="20" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-20" data-original="20">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -586,7 +586,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-21" data-original="21" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-21" data-original="21">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -616,7 +616,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-22" data-original="22" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-22" data-original="22">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -647,7 +647,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-23" data-original="23" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-23" data-original="23">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -668,7 +668,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-24" data-original="24" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-24" data-original="24">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -692,7 +692,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-25" data-original="25" data-cited="13">
+    <article class="elife-reflinks-reflink" id="ref-25" data-original="25">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -723,7 +723,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-26" data-original="26" data-cited="7">
+    <article class="elife-reflinks-reflink" id="ref-26" data-original="26">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -754,7 +754,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-27" data-original="27" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-27" data-original="27">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -784,7 +784,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-28" data-original="28" data-cited="6">
+    <article class="elife-reflinks-reflink" id="ref-28" data-original="28">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -814,7 +814,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-29" data-original="29" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-29" data-original="29">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -839,7 +839,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-30" data-original="30" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-30" data-original="30">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -870,7 +870,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-31" data-original="31" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-31" data-original="31">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -898,7 +898,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-32" data-original="32" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-32" data-original="32">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -929,7 +929,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-33" data-original="33" data-cited="2">
+    <article class="elife-reflinks-reflink" id="ref-33" data-original="33">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -960,7 +960,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-34" data-original="34" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-34" data-original="34">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -986,7 +986,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-35" data-original="35" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-35" data-original="35">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -1017,7 +1017,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-36" data-original="36" data-cited="2">
+    <article class="elife-reflinks-reflink" id="ref-36" data-original="36">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -1047,7 +1047,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-37" data-original="37" data-cited="6">
+    <article class="elife-reflinks-reflink" id="ref-37" data-original="37">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -1078,7 +1078,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-38" data-original="38" data-cited="3">
+    <article class="elife-reflinks-reflink" id="ref-38" data-original="38">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -1109,7 +1109,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-39" data-original="39" data-cited="1">
+    <article class="elife-reflinks-reflink" id="ref-39" data-original="39">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -1139,7 +1139,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-40" data-original="40" data-cited="5">
+    <article class="elife-reflinks-reflink" id="ref-40" data-original="40">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
@@ -1170,7 +1170,7 @@
             </div>
         </div>
     </article>
-    <article class="elife-reflinks-reflink" id="ref-41" data-original="41" data-cited="2">
+    <article class="elife-reflinks-reflink" id="ref-41" data-original="41">
         <div class="elife-reflink-indicators">
             <div class="elife-reflink-indicators-left">
                 <div class="elife-reflink-indicator-number">
