Get rid of links not mentioned in xml and other minor cleanup

--- a/tests/fixtures/html/00288-vor-section-references.html
+++ b/tests/fixtures/html/00288-vor-section-references.html
@@ -93,7 +93,7 @@
         </div>
         <div class="elife-reflink-main">
             <cite class="elife-reflink-title">
-                <a href="http://dx.doi.org/10.7326/0003-4819-98-6-958" target="_blank"><span class="nlm-article-title">Genital herpes simplex virus infections: clinical manifestations, course, and complications</span></a>
+                <span class="nlm-article-title">Genital herpes simplex virus infections: clinical manifestations, course, and complications</span>
             </cite>
             <div class="elife-reflink-authors">
                 <span class="elife-reflink-author"><a href="http://scholar.google.com/scholar?q=&quot;author:L Corey&quot;">L Corey</a></span>,
@@ -106,9 +106,6 @@
                 <span class="elife-reflink-details-volume">98</span>,
                 <span class="elife-reflink-details-pages">958-72</span>,
                 <span class="elife-reflink-details-year">1983</span>
-                <div class="elife-reflink-doi-cited-wrapper">
-                    <span class="elife-reflink-details-doi"><a href="http://dx.doi.org/10.7326/0003-4819-98-6-958">http://dx.doi.org/10.7326/0003-4819-98-6-958</a></span>
-                </div>
             </div>
         </div>
     </article>
@@ -182,7 +179,7 @@
         </div>
         <div class="elife-reflink-main">
             <cite class="elife-reflink-title">
-                <a href="http://dx.doi.org/10.4049/jimmunol.171.8.3928" target="_blank"><span class="nlm-article-title">Different dynamics of CD4+ and CD8+ T cell responses during and after acute lymphocytic choriomeningitis virus infection</span></a>
+                <span class="nlm-article-title">Different dynamics of CD4+ and CD8+ T cell responses during and after acute lymphocytic choriomeningitis virus infection</span>
             </cite>
             <div class="elife-reflink-authors">
                 <span class="elife-reflink-author"><a href="http://scholar.google.com/scholar?q=&quot;author:RJ De Boer&quot;">RJ De Boer</a></span>,
@@ -194,9 +191,6 @@
                 <span class="elife-reflink-details-volume">171</span>,
                 <span class="elife-reflink-details-pages">3928-35</span>,
                 <span class="elife-reflink-details-year">2003</span>
-                <div class="elife-reflink-doi-cited-wrapper">
-                    <span class="elife-reflink-details-doi"><a href="http://dx.doi.org/10.4049/jimmunol.171.8.3928">http://dx.doi.org/10.4049/jimmunol.171.8.3928</a></span>
-                </div>
             </div>
         </div>
     </article>
@@ -655,8 +649,10 @@
                 </div>
             </div>
         </div>
-        <div class="elife-reflink-main"><cite class="elife-reflink-title"><span class="nlm-article-title"
-                                                                                data-hwp-id="article-title-24">Herpes simplex viruses and their replication</span></cite>
+        <div class="elife-reflink-main">
+            <cite class="elife-reflink-title">
+                <span class="nlm-article-title">Herpes simplex viruses and their replication</span>
+            </cite>
             <div class="elife-reflink-authors">
                 <span class="elife-reflink-author"><a href="http://scholar.google.com/scholar?q=&quot;author:BKD Roizman&quot;">BKD Roizman</a></span> et al.
             </div>
